# RequestMonitoring.AdminApi/DTO/CreateDomainDTO.cs
@@ -1,7 +1,0 @@
-﻿namespace RequestMonitoring.AdminApi.DTO;
-
-public class CreateDomainDTO
-{
-    public required string Host { get; set; }
-    public required int DomainStatusTypeId { get; set; }
-}
