# RequestMonitoring.AdminApi/DTO/CreateUpdateDomainDto.cs
@@ -1,0 +1,8 @@
+namespace RequestMonitoring.AdminApi.DTO;
+
+/// <summary>
+/// Данные для создания или обновления домена
+/// </summary>
+/// <param name="Host">Хост домена</param>
+/// <param name="DomainStatusTypeId">Идентификатор типа статуса</param>
+public record CreateUpdateDomainDto(string Host, int DomainStatusTypeId);
