# RequestMonitoring.AdminApi/DTO/UpdateDomainDTO.cs
@@ -1,7 +1,0 @@
-﻿namespace RequestMonitoring.AdminApi.DTO;
-
-public class UpdateDomainDTO
-{
-    public required string Host { get; init; }
-    public required int DomainStatusTypeId { get; init; }
-}
