# RequestMonitoring.AdminPanel/Api/IRequestMonitoringAdminPanelApiWrapper.cs
@@ -2,9 +2,9 @@
 
 public interface IRequestMonitoringAdminPanelApiWrapper
 {
-    public Task<IEnumerable<Domain>> GetDomainList();
-    public Task<Domain> GetDomain(int id);
-    public Task<Domain> CreateDomain(CreateDomainDTO dto);
-    public Task<Domain> UpdateDomain(int id, UpdateDomainDTO dto);
+    public Task<IEnumerable<DomainDto>> GetDomainList();
+    public Task<DomainDto> GetDomain(int id);
+    public Task<DomainDto> CreateDomain(CreateUpdateDomainDto dto);
+    public Task<DomainDto> UpdateDomain(int id, CreateUpdateDomainDto dto);
     public Task DeleteDomain(int id);
 }
